--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -12,6 +12,7 @@
     <script src="cordova.js"></script>
     <script src="lib/leaflet/dist/leaflet.js"></script>
     <script src="lib/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
+    <script src="lib/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
     <script src="lib/ngstorage/ngStorage.min.js"></script>
     <script src="lib/angular-flux-helpers/angular-flux.js"></script>
 
@@ -27,6 +28,7 @@
     <!-- using sass -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="lib/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
   </head>
   <body ng-app="app">
     <div>
